# detect-armor

./: Armor.cpp  Armor.h  CMakeLists.txt  README.md  main.cpp
